# NSDN

./: .gitignore  FUTURE_STEPS.md  README.md  pyproject.toml
config/: nsdn.yaml
docs/: DESIGN.md
docs/design/: delivery.md  mobile-desktop.md  multi-tenant.md  newspaper_agent.md
scripts/: preview_colors.py  setup_schedule.sh
src/nsdn/: __init__.py  cli.py  config.py  cookie_utils.py  db.py  debug.py  extract.py  filter.py  llm.py  loader.py  prompts.py  render.py  serve.py  synthesize.py  utils.py  vector.py
src/nsdn/clusters/: __init__.py  base.py  llm_cluster.py
src/nsdn/delivery/: __init__.py  base.py  builder.py  email.py  telegram.py
src/nsdn/designers/: __init__.py  base.py  pico.py  water.py
src/nsdn/newspaper/: __init__.py  base.py  component.py  cover.py  evaluator.py  generator.py  prompts.py  renderer.py  selectors.py
src/nsdn/newspaper/layouts/: __init__.py  grid.py  hero.py  sidebar.py
src/nsdn/sources/: __init__.py  base.py  reddit.py  rss.py  test_reddit_images.py
src/nsdn/summarizers/: __init__.py  base.py  llm_summarizer.py
templates/: pico.html  water.html
